[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/forge/gui/item_creation_menu/sword_styling_menu/SwordStylingMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/forge/gui/component/SwordViewContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/forge/gui/item_creation_menu/sword_styling_menu/StylingTypeControl.gd" type="Script" id=3]
[ext_resource path="res://scenes/forge/gui/component/GuiToggleButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/forge/gui/item_creation_menu/sword_styling_menu/PommelSelector.gd" type="Script" id=5]
[ext_resource path="res://scripts/forge/gui/item_creation_menu/sword_styling_menu/GripSelector.gd" type="Script" id=6]
[ext_resource path="res://scripts/forge/gui/item_creation_menu/sword_styling_menu/GuardSelector.gd" type="Script" id=7]
[ext_resource path="res://scripts/forge/gui/item_creation_menu/sword_styling_menu/BladeSelector.gd" type="Script" id=8]

[node name="SwordStylingMenu" type="VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_constants/separation = 32
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="SwordViewContainer" parent="." index="0" instance=ExtResource( 2 )]

margin_left = 365.0
margin_right = 915.0
margin_bottom = 80.0
_sections_unfolded = [ "Material", "Size Flags", "custom_constants" ]

[node name="StylingTypeControl" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 1280.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 32
alignment = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="PommelButton" parent="StylingTypeControl" index="0" instance=ExtResource( 4 )]

margin_left = 272.0
margin_right = 432.0
text = "POMMEL"

[node name="GripButton" parent="StylingTypeControl" index="1" instance=ExtResource( 4 )]

margin_left = 464.0
margin_right = 624.0
text = "GRIP"

[node name="GuardButton" parent="StylingTypeControl" index="2" instance=ExtResource( 4 )]

margin_left = 656.0
margin_right = 816.0
text = "GUARD"

[node name="BladeButton" parent="StylingTypeControl" index="3" instance=ExtResource( 4 )]

margin_left = 848.0
margin_right = 1008.0
text = "BLADE"

[node name="MarginContainer" type="MarginContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 624.0
margin_top = 214.0
margin_right = 656.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="ScrollContainer4" type="ScrollContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 506.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Scroll" ]

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer4" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
_sections_unfolded = [ "custom_constants" ]

[node name="PommelSelector" type="GridContainer" parent="MarginContainer/ScrollContainer4/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 4
script = ExtResource( 5 )
_sections_unfolded = [ "custom_constants" ]

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 506.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Scroll" ]

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="GripSelector" type="GridContainer" parent="MarginContainer/ScrollContainer/MarginContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 4
script = ExtResource( 6 )
_sections_unfolded = [ "custom_constants" ]

[node name="ScrollContainer2" type="ScrollContainer" parent="MarginContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 506.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Mouse", "Scroll" ]

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
_sections_unfolded = [ "Mouse", "custom_constants" ]

[node name="GuardSelector" type="GridContainer" parent="MarginContainer/ScrollContainer2/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 4
script = ExtResource( 7 )
_sections_unfolded = [ "custom_constants" ]

[node name="ScrollContainer3" type="ScrollContainer" parent="MarginContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 506.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Scroll" ]

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
_sections_unfolded = [ "custom_constants" ]

[node name="BladeSelector" type="GridContainer" parent="MarginContainer/ScrollContainer3/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 2
script = ExtResource( 8 )
_sections_unfolded = [ "custom_constants" ]


